# GameAPI

./: Cargo.toml  README.md
api/: Cargo.toml  file.xml
api/src/: lib.rs
api/src/version/: fabric.rs  forge.rs  maven.rs  minecraft.rs  mod.rs  quilt.rs
api/src/versions/: fabric.rs  forge.rs  minecraft.rs  mod.rs  quilt.rs
src/: main.rs  util.rs
src/routes/: default.rs  game_download.rs  game_versions.rs  loader_download.rs  loader_versions.rs  mod.rs
